@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2012 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -14,35 +14,164 @@
 
 package com.liferay.counter.service;
 
+import com.liferay.counter.model.Counter;
 import com.liferay.portal.kernel.exception.SystemException;
-import com.liferay.portal.service.PortalServiceUtil;
-import com.liferay.portal.service.ServiceTestUtil;
-import com.liferay.portal.test.EnvironmentExecutionTestListener;
-import com.liferay.portal.test.ExecutionTestListeners;
-import com.liferay.portal.test.LiferayIntegrationJUnitTestRunner;
+import com.liferay.portal.kernel.process.ClassPathUtil;
+import com.liferay.portal.kernel.process.ProcessCallable;
+import com.liferay.portal.kernel.process.ProcessConfig;
+import com.liferay.portal.kernel.process.ProcessConfig.Builder;
+import com.liferay.portal.kernel.process.ProcessException;
+import com.liferay.portal.kernel.process.ProcessExecutor;
+import com.liferay.portal.kernel.scheduler.SchedulerEngineHelperUtil;
+import com.liferay.portal.kernel.test.ExecutionTestListeners;
+import com.liferay.portal.kernel.util.StringUtil;
+import com.liferay.portal.test.listeners.MainServletExecutionTestListener;
+import com.liferay.portal.test.runners.LiferayIntegrationJUnitTestRunner;
+import com.liferay.portal.util.InitUtil;
+import com.liferay.portal.util.PropsUtil;
+import com.liferay.portal.util.PropsValues;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.concurrent.Future;
+
+import org.junit.AfterClass;
 import org.junit.Assert;
+import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
 /**
- * @author Michael Young
+ * @author Shuyang Zhou
  */
-@ExecutionTestListeners(listeners = {EnvironmentExecutionTestListener.class})
+@ExecutionTestListeners(listeners = {MainServletExecutionTestListener.class})
 @RunWith(LiferayIntegrationJUnitTestRunner.class)
 public class CounterLocalServiceTest {
 
+	@BeforeClass
+	public static void setUpClass() throws Exception {
+		_COUNTER_NAME = StringUtil.randomString();
+
+		CounterLocalServiceUtil.reset(_COUNTER_NAME);
+
+		Counter counter = CounterLocalServiceUtil.createCounter(_COUNTER_NAME);
+
+		CounterLocalServiceUtil.updateCounter(counter);
+	}
+
+	@AfterClass
+	public static void tearDownClass() throws Exception {
+		CounterLocalServiceUtil.reset(_COUNTER_NAME);
+	}
+
 	@Test
-	public void testCounterIncrement_Rollback() throws Exception {
-		long counterValue = ServiceTestUtil.nextLong() + 1;
+	public void testConcurrentIncrement() throws Exception {
+		String classPath = ClassPathUtil.getJVMClassPath(true);
 
-		try {
-			PortalServiceUtil.testCounterIncrement_Rollback();
-		}
-		catch (SystemException se) {
+		Builder builder = new Builder();
+
+		builder.setArguments(
+			Arrays.asList("-Xmx1024m", "-XX:MaxPermSize=200m"));
+		builder.setBootstrapClassPath(classPath);
+		builder.setRuntimeClassPath(classPath);
+
+		ProcessConfig processConfig = builder.build();
+
+		List<Future<Long[]>> futuresList = new ArrayList<Future<Long[]>>();
+
+		for (int i = 0; i < _PROCESS_COUNT; i++) {
+			ProcessCallable<Long[]> processCallable =
+				new IncrementProcessCallable(
+					"Increment Process-" + i, _COUNTER_NAME, _INCREMENT_COUNT);
+
+			Future<Long[]> futures = ProcessExecutor.execute(
+				processConfig, processCallable);
+
+			futuresList.add(futures);
 		}
 
-		Assert.assertTrue(ServiceTestUtil.nextLong() > counterValue);
+		int total = _PROCESS_COUNT * _INCREMENT_COUNT;
+
+		List<Long> ids = new ArrayList<Long>(total);
+
+		for (Future<Long[]> futures : futuresList) {
+			ids.addAll(Arrays.asList(futures.get()));
+		}
+
+		Assert.assertEquals(total, ids.size());
+
+		Collections.sort(ids);
+
+		for (int i = 0; i < total; i++) {
+			Long id = ids.get(i);
+
+			Assert.assertEquals(i + 1, id.intValue());
+		}
+	}
+
+	private static final int _INCREMENT_COUNT = 10000;
+
+	private static final int _PROCESS_COUNT = 4;
+
+	private static String _COUNTER_NAME;
+
+	private static class IncrementProcessCallable
+		implements ProcessCallable<Long[]> {
+
+		public IncrementProcessCallable(
+			String processName, String counterName, int incrementCount) {
+
+			_processName = processName;
+			_counterName = counterName;
+			_incrementCount = incrementCount;
+		}
+
+		@Override
+		public Long[] call() throws ProcessException {
+			System.setProperty("catalina.base", ".");
+			System.setProperty("external-properties", "portal-test.properties");
+
+			PropsUtil.set(PropsValues.COUNTER_INCREMENT + _COUNTER_NAME, "1");
+
+			InitUtil.initWithSpringAndModuleFramework();
+
+			List<Long> ids = new ArrayList<Long>();
+
+			try {
+				for (int i = 0; i < _incrementCount; i++) {
+					ids.add(CounterLocalServiceUtil.increment(_counterName));
+				}
+			}
+			catch (SystemException se) {
+				throw new ProcessException(se);
+			}
+			finally {
+				try {
+					SchedulerEngineHelperUtil.shutdown();
+
+					InitUtil.stopModuleFramework();
+				}
+				catch (Exception e) {
+					throw new ProcessException(e);
+				}
+			}
+
+			return ids.toArray(new Long[ids.size()]);
+		}
+
+		@Override
+		public String toString() {
+			return _processName;
+		}
+
+		private static final long serialVersionUID = 1L;
+
+		private String _counterName;
+		private int _incrementCount;
+		private String _processName;
+
 	}
 
 }
